--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <kafka.version>1.1.0</kafka.version>
         <metrics-library.version>0.0.5</metrics-library.version>
         <config-bootstrapper.version>0.0.7</config-bootstrapper.version>
+        <jackson.version>2.9.5</jackson.version>
     </properties>
 
     <modules>
