--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>normalizer</artifactId>
         <groupId>io.wizzie.normalizer</groupId>
-        <version>0.6.1.3-SNAPSHOT</version>
+        <version>0.7.0</version>
     </parent>
 
     <artifactId>docker</artifactId>
