--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.wizzie.normalizer</groupId>
     <artifactId>normalizer</artifactId>
-    <version>0.6.1.3-SNAPSHOT</version>
+    <version>0.7.0</version>
 
     <packaging>pom</packaging>
 
@@ -44,7 +44,7 @@
     <scm>
         <developerConnection>scm:git:git@github.com:wizzie-io/normalizer.git</developerConnection>
         <connection>scm:git:git@github.com:wizzie-io/normalizer.git</connection>
-        <tag>HEAD</tag>
+        <tag>normalizer-0.7.0</tag>
         <url>git@github.com:wizzie-io/normalizer.git</url>
     </scm>
 
