--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -10,6 +10,8 @@ docs:
     children:
      - title: Topology Path
        url: /architecture/topology_path
+     - title: How to scale
+       url: /architecture/scalability
 
   - title: Configuration
     children:
