--- a/base/pom.xml
+++ b/base/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>normalizer</artifactId>
         <groupId>io.wizzie.normalizer</groupId>
-        <version>0.7.3</version>
+        <version>0.7.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
